Fix form label wrapping

--- a/app/assets/stylesheets/bitters/_variables.scss
+++ b/app/assets/stylesheets/bitters/_variables.scss
@@ -10,7 +10,7 @@ $form-bg-padding: 12px;
 
 // New-Submission Form
 //************************************************************************//
-$form-label-width: 120px;
+$form-label-width: 180px;
 $form-label-margin: 10px;
 
 // Colors
